[gd_scene load_steps=4 format=3 uid="uid://cjtqjuvxadd3p"]

[ext_resource type="Script" uid="uid://dy705qen0attb" path="res://scripts/ui.gd" id="1_q7yx2"]
[ext_resource type="Script" uid="uid://djsoolv38k73k" path="res://scripts/augment_ui.gd" id="2_ofsfp"]
[ext_resource type="Script" uid="uid://c1w6tljlvwbd5" path="res://scripts/panel_container.gd" id="3_yexht"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_q7yx2")

[node name="AugmentUI" type="CanvasLayer" parent="."]
script = ExtResource("2_ofsfp")

[node name="CenterContainer" type="CenterContainer" parent="AugmentUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="AugmentUI/CenterContainer"]
layout_mode = 2

[node name="Augment1" type="PanelContainer" parent="AugmentUI/CenterContainer/HBoxContainer" node_paths=PackedStringArray("title_label", "description_label", "icon_texture")]
layout_mode = 2
script = ExtResource("3_yexht")
title_label = NodePath("VBoxContainer/Title")
description_label = NodePath("VBoxContainer/Description")
icon_texture = NodePath("VBoxContainer/TextureRect")

[node name="VBoxContainer" type="VBoxContainer" parent="AugmentUI/CenterContainer/HBoxContainer/Augment1"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AugmentUI/CenterContainer/HBoxContainer/Augment1/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment1/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment1/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="AugmentUI/CenterContainer/HBoxContainer/Augment1/VBoxContainer"]
layout_mode = 2

[node name="Augment2" type="PanelContainer" parent="AugmentUI/CenterContainer/HBoxContainer" node_paths=PackedStringArray("title_label", "description_label", "icon_texture")]
layout_mode = 2
script = ExtResource("3_yexht")
title_label = NodePath("VBoxContainer2/Title")
description_label = NodePath("VBoxContainer2/Description")
icon_texture = NodePath("VBoxContainer2/TextureRect")

[node name="VBoxContainer2" type="VBoxContainer" parent="AugmentUI/CenterContainer/HBoxContainer/Augment2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AugmentUI/CenterContainer/HBoxContainer/Augment2/VBoxContainer2"]
layout_mode = 2

[node name="Title" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment2/VBoxContainer2"]
layout_mode = 2

[node name="Description" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment2/VBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="AugmentUI/CenterContainer/HBoxContainer/Augment2/VBoxContainer2"]
layout_mode = 2

[node name="Augment3" type="PanelContainer" parent="AugmentUI/CenterContainer/HBoxContainer" node_paths=PackedStringArray("title_label", "description_label", "icon_texture")]
layout_mode = 2
script = ExtResource("3_yexht")
title_label = NodePath("VBoxContainer3/Title")
description_label = NodePath("VBoxContainer3/Description")
icon_texture = NodePath("VBoxContainer3/TextureRect")

[node name="VBoxContainer3" type="VBoxContainer" parent="AugmentUI/CenterContainer/HBoxContainer/Augment3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AugmentUI/CenterContainer/HBoxContainer/Augment3/VBoxContainer3"]
layout_mode = 2

[node name="Title" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment3/VBoxContainer3"]
layout_mode = 2

[node name="Description" type="Label" parent="AugmentUI/CenterContainer/HBoxContainer/Augment3/VBoxContainer3"]
layout_mode = 2

[node name="Button" type="Button" parent="AugmentUI/CenterContainer/HBoxContainer/Augment3/VBoxContainer3"]
layout_mode = 2

[connection signal="selected" from="AugmentUI/CenterContainer/HBoxContainer/Augment1" to="AugmentUI" method="_on_augment_selected"]
[connection signal="pressed" from="AugmentUI/CenterContainer/HBoxContainer/Augment1/VBoxContainer/Button" to="AugmentUI/CenterContainer/HBoxContainer/Augment1" method="_on_button_pressed"]
[connection signal="selected" from="AugmentUI/CenterContainer/HBoxContainer/Augment2" to="AugmentUI" method="_on_augment_selected"]
[connection signal="pressed" from="AugmentUI/CenterContainer/HBoxContainer/Augment2/VBoxContainer2/Button" to="AugmentUI/CenterContainer/HBoxContainer/Augment2" method="_on_button_pressed"]
[connection signal="selected" from="AugmentUI/CenterContainer/HBoxContainer/Augment3" to="AugmentUI" method="_on_augment_selected"]
[connection signal="pressed" from="AugmentUI/CenterContainer/HBoxContainer/Augment3/VBoxContainer3/Button" to="AugmentUI/CenterContainer/HBoxContainer/Augment3" method="_on_button_pressed"]
